0.0.2
-----
1. Package vcruntime140.dll with Windows ZIP.
2. Update user docs.

0.0.1
-----
1. Initial release.